--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,17 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.10.0
+  firebase_storage: ^11.1.1
+  firebase_messaging: ^14.4.1
+  cloud_firestore: ^4.5.2
+
+  firebase_auth: ^4.4.2
+
   google_fonts: ^3.0.1
   flutter_screenutil: ^5.5.3+2
   flutter_svg: ^2.0.5
+
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +70,7 @@ flutter:
   assets:
     - assets/img/
     - assets/img/aj.svg
+    - assets/img/attachment_98127672 1.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
