--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_storage: ^11.1.1
   firebase_messaging: ^14.4.1
   cloud_firestore: ^4.5.2
+  http: ^0.13.5
 
   firebase_auth: ^4.4.2
 
