--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,15 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  image_picker: ^0.8.7+4
   firebase_core: ^2.10.0
   firebase_storage: ^11.1.1
   firebase_messaging: ^14.4.1
   cloud_firestore: ^4.5.2
+  google_sign_in: ^6.1.0
+
   http: ^0.13.5
+
 
   firebase_auth: ^4.4.2
 
