--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,9 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  emoji_picker_flutter: ^1.5.4
   image_picker: ^0.8.7+4
+
   firebase_core: ^2.10.0
   firebase_storage: ^11.1.1
   firebase_messaging: ^14.4.1
